--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=7.0.0",
         "casinelli/laravel-campaignmonitor": "dev-master",
         "fideloper/proxy": "~3.3",
-        "guzzlehttp/guzzle": "^6.3",
+        "guzzlehttp/guzzle": "~5.3|~6.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
